# march23

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
certs/: ca.crt  ca.key  ca.srl  server.conf  server.crt  server.csr  server.key
proto/: kv.proto
scripts/: build.sh  start.sh
src/: api_node.cpp  load_client.cpp  storage_node.cpp
